# causalprog

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
LICENSE/: index.html
api/: index.html
developers/tests/: index.html
docs/: api.md  index.md  mathematical-context.md
docs/developers/: tests.md
docs/theory/: casual-problem-terminology.md  glossary.md  mathematical-context.md  simple-working-example.md
examples/: README.md  causalprog_basics.py  two_normal.ipynb
search/: search_index.json
src/causalprog/: __init__.py  _types.py  causal_problem.py  regression_function.py
src/causalprog/_abc/: __init__.py  backend_agnostic.py  labelled.py
src/causalprog/algorithms/: __init__.py  do.py  evaluate.py  expectation.py  iteration.py  moments.py  replace_node.py
src/causalprog/backend/: __init__.py  _convert_signature.py  _typing.py  signature.py  translation.py  translator.py
src/causalprog/causal_problem/: __init__.py  _base_component.py  causal_estimand.py  causal_problem.py  components.py  handlers.py
src/causalprog/distribution/: __init__.py  base.py  family.py  normal.py
src/causalprog/distributions/: __init__.py  base.py
src/causalprog/graph/: __init__.py  causal_problem.py  graph.py  node.py  ricardo.py  special.py
src/causalprog/mlps/: __init__.py  _specifiers.py  _validation.py  mlp.py
src/causalprog/quadrature/: __init__.py  base.py  gaussian.py  monte_carlo.py
tests/: conftest.py  test_graph.py  test_translator.py
tests/fixtures/: general.py  graph.py  jax.py  mc.py  ricardo.py  solvers.py  standard_distributions.py
tests/test__abc/: test_backend_agnostic.py  test_labelled.py
tests/test_algorithms/: test_do.py  test_evaluate.py  test_moments.py  test_replace_node.py
tests/test_backend/: conftest.py  test_check_variable_length_parameters.py  test_convert_signature.py  test_signature_can_be_cast.py  test_translation.py  test_translator.py
tests/test_causal_problem/: conftest.py  test_associate_models_to_components.py  test_callables.py  test_compare_handlers.py  test_cpcomponent.py  test_cpcomponent_same_model.py  test_creation.py  test_graph_and_param.py  test_handlers.py  test_sigma.py
tests/test_distributions/: conftest.py  test_backend_as_expected.py  test_different_backends.py  test_family.py  test_sample_compatibility.py
tests/test_graph/: test_algorithms.py  test_component.py  test_construction.py  test_model.py  test_model_constructor.py  test_ordering.py  test_parameters.py  test_random_variables.py  test_ricardo.py  test_special.py
tests/test_integration/: _helpers.py  test_example_model.py  test_ricardo_causal_response_function.py  test_ricardo_regression_function.py  test_two_normal_example.py
tests/test_mlps/: _helpers.py  conftest.py  test_call_with_dicts.py  test_mlps.py  test_mlps_pytree_input_formats.py  test_specifiers.py  test_validators.py
tests/test_node/: test_create_distribution.py  test_create_model_site.py  test_random_variables.py  test_replace_and_remove.py  test_vector_nodes.py
tests/test_notebooks/: test_notebooks_run.py
tests/test_quadrature/: test_gaussian_quadrature.py  test_mc_uniform_weights_gaussian_samples.py  test_monte_carlo.py  test_uniform_weights_monte_carlo.py
tests/test_solvers/: test_normalise_solver_inputs.py  test_sgd.py
tests/test_utils/: test_graphs.py  test_norms.py
theory/glossary/: index.html
theory/mathematical-context/: index.html
theory/simple-working-example/: index.html
(+21 files in other folders)
